fix nav spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -441,6 +441,7 @@ section {
   background: url(../images/nav-bg.gif) #353535;
   border-bottom: 4px solid #434343;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+  display: flex;
 }
 #header nav {
   display: flex;
@@ -452,7 +453,9 @@ section {
   list-style: none;
   color: white;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+  padding: 0 0.5rem;
 }
+
 #header nav li a {
   color: white;
   border: 1px solid #5d910b;
